change to gitignore
want to ignore folders containing "(no copy)" and folders ending is "
old"

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 #################
+##  LaueGo work folders
+#################
+*(no\ copy)*/
+"*\ old/"
+
+
+#################
 ## Eclipse
 #################
 
