updated .gitignore, don’t try to ignore main.scp, but you should lock that file so it does not update when you run Check Version Consistency

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@ old/
 /new/*
 new/
 Old VersionStatus/
-“Check Version Consistency.app/”
-main.scpt
+#  “Check Version Consistency.app/”
+#  main.scpt
 
 #################
 ## Eclipse
